# GenAI

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  support_question.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
