[project]
name = "sandbox"
version = "0.0.1"
description = "Testing project"
authors = [
    {name = "Luís Pires"}
]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = "3.13.1"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
